# learning-haskell

./: cabal.md  exercises.hs  notes.md  setup.md
effective-haskell/: Chapter01.hs
effective-haskell/ch01/: Exercise1.hs  Exercise2.hs  Exercise3.hs
effective-haskell/ch02/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs
effective-haskell/ch03/: Exercise1.hs  Exercise2.hs  Exercise3.hs
effective-haskell/ch04/: Exercise1.hs  Exercise2.hs  Exercise3.hs  exercised.txt
examples/: qsort.hs
haskell-in-depth/: LICENSE  haskell-in-depth.cabal
haskell-in-depth/ch01/: vocab1.hs  vocab2.hs  vocab3.hs
programming-in-haskell/: .gitignore  Hangman.hs  Life.hs  Nim.hs  TicTacToe.hs  ch12.hs  countdown.hs  ex-ch01.hs  ex-ch02.hs  ex-ch03.hs  ex-ch04.hs  ex-ch05.hs  ex-ch06.hs  ex-ch07.hs  ex-ch08.hs  ex-ch09.hs  ex-ch10.hs
soccer-table/: CHANGELOG.md  LICENSE  soccer-table.cabal
soccer-table/app/: Main.hs
soccer-table/input/: premier-league.txt
soccer-table/src/: SoccerTable.hs
soccer-table/test/: SoccerTableTest.hs
tfwh/ch01/: CommonWords.hs  ExerciseA.hs  ExerciseB.hs  ExerciseC.hs  ExerciseD.hs  ExerciseE.hs  ExerciseF.hs  ExerciseG.hs  NumbersAsWords.hs
