cabal-version:      3.0
name:               haskell-in-depth
version:            0.1.0.0
synopsis:           learning Haskell

homepage:           https://github.com/patrickbucher/learning-haskell

license:            MIT
license-file:       LICENSE
author:             Patrick Bucher
maintainer:         patrick.bucher@mailbox.org

extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.16.4.0, text
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-in-depth
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        haskell-in-depth

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite haskell-in-depth-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0

executable vocab1
    main-is: vocab1.hs
    hs-source-dirs: ch01
    build-depends:
        base
      , text

executable vocab2
    main-is: vocab2.hs
    hs-source-dirs: ch01
    build-depends:
        base
      , text
