cabal-version:      2.4
name:               soccer-table
version:            0.1.0.0
synopsis:           calculate soccer league tables from match results
homepage:           https://github.com/patrickbucher/learning-haskell
license:            BSD-3-Clause
license-file:       LICENSE
author:             Patrick Bucher
maintainer:         patrick.bucher@mailbox.org
extra-source-files: CHANGELOG.md

library
    exposed-modules:  SoccerTable
    build-depends:
        base ^>=4.16.4.0,
        regex-base,
        regex-tdfa
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable soccer-table
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0
      , text
      , soccer-table
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite soccer-table-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          SoccerTableTest.hs
    build-depends:
        base ^>=4.16.4.0,
        HUnit,
        soccer-table
    ghc-options:      -Wall
